fix: align container to normal on desktop view

--- a/earahearing-client/src/components/about/about.css
+++ b/earahearing-client/src/components/about/about.css
@@ -34,7 +34,7 @@
 
 @media only screen and (min-width: 980px) {
     .about {
-        padding-top: 4em;
+        padding-top: 1.5em;
     }
     .about--btn_choices {
         width: 50%;
